--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,48 @@
 .App {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
+  box-sizing: border-box;
+  text-align: center;
 }
 
 .CalcContainer {
-  border: 2px solid black;
-  border-radius: 8px;
-  padding: 20px;
+  width: 400px;
+  margin: auto;
+  border-radius: 10px;
+  padding: 10px;
+  background-color: lightpink; 
 }
 
 .CalcDisplay {
-  border: 1px solid black;
+  border: 1px solid black; 
+  margin-bottom: 20px;
+  padding: 5px;
   height: 50px;
   font-size: 2em;
-  margin-bottom: 10px;
-  padding: 10px;
   text-align: right;
-  background: rgb(78, 76, 76);
-  color: white;
+  background-color: lightpink; 
+  color: black; 
+  border-radius: 10px;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2); 
 }
 
 .ButtonContainer {
   display: grid;
-  gap: 10px;
+  gap: 2px;
   grid-template-columns: repeat(4, 1fr);
 }
 
-.CalcButton {
-  border: 1px solid black;
-  font-size: 1.5em;
-  background-color: lightpink;
-  padding: 15px;
-  cursor: pointer;
+.ButtonContainer > button {
+  justify-content: center;
+  border: 1px solid black; 
+  padding: 7px;
+  color: black; 
+  font-size: 2em;
+  background-color: lightpink; 
+  border-radius: 10px;
+  transition: background 0.2s ease; 
 }
 
-.CalcButton:hover {
-  background-color: #ddd;
+.ButtonContainer > button:hover {
+  background-color: black; 
+  color: lightpink; 
+  cursor: pointer;
 }
